k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omni
  labels:
    app.kubernetes.io/name: omni
    app.kubernetes.io/part-of: omni
