k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: omni
  labels:
    app.kubernetes.io/name: omni
spec:
  selector:
    app.kubernetes.io/name: omni
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
